src/objects/Proyecto__c.object
<CustomObject>
    <fields>
        <fullName>Cantidad__c</fullName>
        <label>Cantidad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estado__c</fullName>
        <label>Estado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Delta__c</fullName>
        <label>ID Delta</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Moneda__c</fullName>
        <label>Moneda</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_Proyecto__c</fullName>
        <label>Numero de Proyecto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oportunidad__c</fullName>
        <label>Oportunidad</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Proyectos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Plazo_contrato__c</fullName>
        <label>Plazo contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrecioFinal__c</fullName>
        <formula>IF( Moneda__c = &apos;USD&apos;, (( Precio__c + ( Plazo_contrato__c *  montoMensual__c))*  Oportunidad__r.Dolar_Buget__c ),( Precio__c + (Plazo_contrato__c * montoMensual__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Precio Final</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precio__c</fullName>
        <label>Precio Total Contrato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precio_de_venta__c</fullName>
        <label>Precio de venta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Producto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Producto</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Proyectos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TMI__c</fullName>
        <label>TMI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>montoMensual__c</fullName>
        <label>montoMensual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Proyecto</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <label>Nombre de Proyecto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proyectos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>